post_list little fix(user text-align: left)

--- a/posts/static/css/post_list.css
+++ b/posts/static/css/post_list.css
@@ -226,11 +226,12 @@
     padding: 0%;
     width: 100%;
   }
-  .post_user {
+  .post_grid-a > .post_user {
     /* grid-column: 1/3; */
     grid-area: u;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
   }
   .post_like {
     /* grid-column: 3/4; */
